tooling/nargo_cli/tests/snapshots/compile_failure/static_assert_dynamic_array_len/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: 
  ┌─ src/main.nr:4:5
  │
4 │     std::static_assert([1, 2, dynamic_one].len() == 4, "");
  │     ------------------------------------------------------
  │
  = Call stack:
    1. src/main.nr:4:5

Aborting due to 1 previous error
