tooling/nargo_cli/tests/snapshots/compile_failure/static_assert_dynamic_array_len/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: 
  ┌─ src/main.nr:4:5
  │
4 │     std::static_assert([1, 2, dynamic_one].len() == 4, "");
  │     ------------------------------------------------------
  │
  = Call stack:
    1: main
            at src/main.nr:4:5

Aborting due to 1 previous error
